--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "timr",
     "description": "cron like job scheduling library",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "repository": {
         "type": "git",
         "url": "https://github.com/zaphod1984/timr.git"
@@ -11,7 +11,9 @@
         "moment": "*"
     },
     "devDependencies": {
-
+        "sinon": "*",
+        "mocha": "*",
+        "chai": "*"
     },
     "main": "./index.js",
     "keywords": ["cron", "schedule"],
