specifying dev dependencies more explicit

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "author": "Manuel Ernst <zaphod84@gmx.de>",
   "dependencies": {
-    "moment": "2.1.0"
+    "moment": "^2.1.0"
   },
   "devDependencies": {
-    "sinon": "*",
-    "mocha": "*",
-    "chai": "*"
+    "sinon": "^1.10.3",
+    "mocha": "^1.21.4",
+    "chai": "^1.9.1"
   },
   "main": "./index.js",
   "keywords": [
