--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/seriousManual/timr.git"
   },
-  "author": "Manuel Ernst <zaphod84@gmx.de>",
+  "author": "Manuel Ernst <seriousStuff@gmx.de>",
   "dependencies": {
     "moment": "^2.1.0"
   },
